--- a/components/card/card.module.css
+++ b/components/card/card.module.css
@@ -4,6 +4,8 @@
   min-width: 300px;
   height: 170px;
   min-height: 170px;
+  /* background-color: red; */
+  
 }
 
 .mdItem {
@@ -11,7 +13,7 @@
   width: 158px;
   min-width: 158px;
   height: 280px;
-  min-height: 280px;
+  min-height: 280px;    
 }
 
 .lgItem {
@@ -20,13 +22,16 @@
   min-width: 218px;
   height: 434px;
   min-height: 434px;
+  
 }
 .container {
   margin-right: 0.25rem /* 4px */;
   cursor: pointer;
+  /* position: relative; */
 }
 
-.cardImg {
+.cardImg { 
+  /* position: absolute; */
   top: 0px;
   right: 0px;
   bottom: 0px;
@@ -39,4 +44,5 @@
   display: block;
 
   max-width: 100%;
+  max-height: 100%;
 }
