--- a/components/card/card.module.css
+++ b/components/card/card.module.css
@@ -1,11 +1,17 @@
+.imgMotionWrapper{
+  position: relative;
+  display: inline-block;
+}
+.imgMotionWrapper:hover{
+  z-index: 99;
+}
+
 .smItem {
   position: relative;
   width: 300px;
   min-width: 300px;
   height: 170px;
-  min-height: 170px;
-  /* background-color: red; */
-  
+  min-height: 170px;  
 }
 
 .mdItem {
@@ -21,8 +27,7 @@
   width: 218px;
   min-width: 218px;
   height: 434px;
-  min-height: 434px;
-  
+  min-height: 434px;  
 }
 .container {
   margin-right: 0.25rem /* 4px */;
