--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   padding: 0 2rem;
 }
 
@@ -126,4 +126,10 @@
   .logo img {
     filter: invert(1);
   }
+} */
+
+
+/* ======my style====== */
+.sectionWrapper{
+  margin-top: 1.5rem;
 }
