--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,3 +1,24 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  min-height: 100vh;
+  background-color: var(--black);
+
+  background-image: linear-gradient(rgb(0 0 0 / 60%), rgb(0 0 0 / 60%)),
+    url(/static/netflix-background.jpg);
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+
+  padding-top: 2rem /* 32px */;
+  padding-bottom: 2rem /* 32px */;
+}
+
 .wrapper {
   padding-left: 1rem /* 16px */;
   padding-right: 1rem /* 16px */;
